some initial structuring

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connective",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "ts-node test.ts"
   },
