--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,12 @@
     "lib": [
       "es2017"
     ]
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "test.ts",
+    "src/test/**/*"
+  ]
 }
