--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@types/lodash.isequal": "^4.5.5",
+    "lodash": "^4.17.14",
     "lodash.isequal": "^4.5.0",
     "rxjs": "^6.5.2"
   }
