--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@connectv/core",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "agent-based reactive programming library for typescript/javascript",
   "keywords": [
     "connective",
@@ -30,8 +30,8 @@
   "author": "Eugene Ghanizadeh Khoub <eugene@connect-platform.com>",
   "license": "MIT",
   "bugs": "https://github.com/CONNECT-platform/connective/issues",
-  "main": "dist/es5/index.js",
-  "types": "dist/es5/index.d.ts",
+  "main": "dist/es6/index.js",
+  "types": "dist/es6/index.d.ts",
   "scripts": {
     "build": "tsc -p conf/typescript/es5.json && tsc -p conf/typescript/es6.json",
     "pack": "rollup -c conf/rollup/es6.js && rollup -c conf/rollup/es5.js",
@@ -39,10 +39,11 @@
     "docs": "nodemon ./docs/serve.js --config ./docs/nodemon.json"
   },
   "files": [
-    "dist/es5",
+    "dist/es6",
     "dist/bundles",
     "logo.svg"
   ],
+  "sideEffects": false,
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
